fix: adjust QR code section margin and enhance order details spacing for better layout

--- a/wp-content/themes/superio-child/style.css
+++ b/wp-content/themes/superio-child/style.css
@@ -605,6 +605,12 @@ span.featured {
     color: #1967d2;
     font-size: 14px;
 }
+.woocommerce-order-details {
+	margin-top: 30px!important;
+}
+.woocommerce-customer-details {
+	margin-top: 30px!important;	
+}
 
 /*=============================*/
 /*===   Loader mini CSS    ===*/
